--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1"
   },
