--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^3.0.0-beta.6",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-multi-carousel": "^2.6.5",
     "react-slick": "^0.28.1",
